_archive/content-services/3.4/references/qs-ref-templates.md
---
author: [Alfresco Documentation, Alfresco Documentation]
audience: 
option: 
---

# Templates

The Web Quick Start demo includes reusable template pages \(Surf pages\) that can be referenced in Share. A template mapping configured for a section specifies the page layout used for assets stored within that section on the website.

The template defines the components that should be displayed in the various regions of the layout, as well as the source of the data to be rendered.

The topics in this reference section detail the available templates, list where each is referenced in the Quick Start Share site, and indicate the source of the data populating specific template regions.

-   **[homepage](../references/qs-ref-homepage.md)**  
The section **Alfresco Quick Start \> Quick Start Editorial \> root** has the template mapping `ws:indexPage=homepage`.
-   **[sectionpage1](../references/qs-ref-sectionpage1.md)**  
The section **Alfresco Quick Start \> Quick Start Editorial \> root \> news** has the template mapping `ws:indexPage=sectionpage1`.
-   **[sectionpage2](../references/qs-ref-sectionpage2.md)**  
The section **Alfresco Quick Start \> Quick Start Editorial \> root \> blog** has the template mapping `ws:indexPage=sectionpage2`.
-   **[sectionpage3](../references/qs-ref-sectionpage3.md)**  
The following three sections are configured with the template mapping `ws:indexPage=sectionpage3`:
-   **[sectionpage4](../references/qs-ref-sectionpage4.md)**  
The section **Alfresco Quick Start \> Quick Start Editorial \> root \> publications** has the template mapping `ws:indexPage=sectionpage4`.
-   **[sectionpage5](../references/qs-ref-sectionpage5.md)**  
The following two sections are configured with the template mapping `ws:indexPage=sectionpage5`:
-   **[articlepage1](../references/qs-ref-articlepage1.md)**  
The section **Alfresco Quick Start \> Quick Start Editorial \> root** has the template mapping `ws:article=articlepage1`.
-   **[articlepage2](../references/qs-ref-articlepage2.md)**  
The section **Alfresco Quick Start \> Quick Start Editorial \> root \> blog** has the template mapping `ws:article=articlepage2`.
-   **[publicationpage1](../references/qs-ref-publicationpage1.md)**  
The section **Alfresco Quick Start \> Quick Start Editorial \> root \> publications** has the template mapping `cmis:document=publicationpage1`.
-   **[contactpage1](../references/qs-ref-contactpage1.md)**  
The section **Alfresco Quick Start \> Quick Start Editorial \> root \> contact** has the template mapping `ws:article=contactpage1`.

**Parent topic:**[Reference](../references/qs-ref-intro.md)

